Fix contrast errors

--- a/styles/base.css
+++ b/styles/base.css
@@ -74,7 +74,7 @@ header h1 {
 
 header span {
     font-family: "Lora", serif;
-    color: var(--peach);
+    color: var(--rich-black);
 }
 
 main {
